--- a/app/src/main/res/layout/fragment_venue_detail.xml
+++ b/app/src/main/res/layout/fragment_venue_detail.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.NestedScrollView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
@@ -17,32 +16,34 @@
             android:layout_height="200dp" />
 
         <ImageView
-            android:id="@+id/image_venue_detail_venue_icon"
+            android:id="@+id/image_venue_detail_venue"
             android:layout_width="match_parent"
             android:layout_height="270dp"
             android:layout_marginTop="5dp" />
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="50dp"
+            android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
-            android:background="@color/cardview_shadow_start_color">
+            android:background="@color/cardview_shadow_start_color"
+            android:padding="5dp">
 
             <TextView
                 android:id="@+id/card_venue_detail_venue_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
-                android:textColor="@color/cardview_dark_background"/>
+                android:textColor="@color/cardview_dark_background" />
+
+            <TextView
+                android:id="@+id/card_venue_detail_venue_url"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/card_venue_detail_venue_name"
+                android:layout_marginTop="5dp"
+                android:gravity="center" />
 
         </RelativeLayout>
-
-        <TextView
-            android:id="@+id/card_venue_detail_venue_url"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginTop="2dp"/>
 
         <android.support.v7.widget.AppCompatTextView
             android:id="@+id/text_venue_detail_tip_title"
